# pfr-qb-scraper

./: .coverage  .cursorrules  .env  .gitignore  .markdownlint.json  .prettierignore  .prettierrc  CLAUDE.md  README.md  log.txt  main.py  player_urls_2024.txt  pyproject.toml  pytest.ini  requirements.txt  run_enhanced_scraper.py
.claude/: settings.local.json
.cursor/: .cursorrules
data/: player_urls_2024.txt
debug/: check_2024_tables.py  check_column_names.py  check_team_code_lengths.py  check_teams.py  check_teams_schema.py  debug_2024_stats.py  debug_column_names.py  debug_joe_burrow_2024.py  debug_name_matching.py  test_simple_parsing.py  test_single_player_data.py
docs/: MIGRATION_PLAN.md  MIGRATION_RULES.md  MIGRATION_SUMMARY.md  PRIORITY_UPGRADES.md  SCHEMA_IMPROVEMENTS.md  SINGLE_PLAYER_SCRAPING.md  SUPABASE_DEPLOYMENT.md
logs/: qb_splits_rows.csv
scripts/: __init__.py  benchmark_bulk_operations.py  clear_qb_data.py  debug_splits_page.py  debug_splits_scraping.py  demo_bulk_operations.py  deploy_schema_to_supabase.py  enhanced_qb_scraper.py  examine_advanced_passing.py  fix_syntax.py  populate_teams.py  quick_scrape.py  reset_database.py  robust_qb_scraper.py  scrape_joe_burrow.py  scrape_qb_data_2024.py  scrape_single_player.py  setup_bulk_operations.py  simple_scrape.py  test_and_create_tables.py  update_qb_stats_team_codes.py  update_teams_to_pfr_codes.py  verify_joe_burrow_data.py
setup/: __init__.py  advanced_stats.2.csv  advanced_stats_1.csv  deploy_schema.py  setup_supabase_env.py
sql/: schema.sql
src/: README.md  __init__.py
(+208 files in other folders)
